--- a/api/qsharp/microsoft.quantum.canon.positiveintfromresultarr.yml
+++ b/api/qsharp/microsoft.quantum.canon.positiveintfromresultarr.yml
@@ -3,13 +3,7 @@ uid: microsoft.quantum.canon.positiveintfromresultarr
 name: PositiveIntFromResultArr
 type: function
 namespace: Microsoft.Quantum.Canon
-summary: >-
-  > [!WARNING]
-
-  > 已放弃
-
-
-  请使用 @"microsoft.quantum.canon.resultarrayasint"。
+summary: PositiveIntFromResultArr 已被弃用。 请改用 @"microsoft.quantum.convert.resultarrayasint"。
 syntax: 'function PositiveIntFromResultArr (results : Result[]) : Int'
 input:
   content: '(results : Result[])'
@@ -24,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 5f136d57c660738177575dbcd15860c0eaaed62d
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 26259083471ba73f7fcad048d6388fc9bbce2616
+  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73227706"
+  ms.lasthandoff: 12/05/2019
+  ms.locfileid: "74863686"
