--- a/api/qsharp/microsoft.quantum.extensions.bitwise.not.yml
+++ b/api/qsharp/microsoft.quantum.extensions.bitwise.not.yml
@@ -3,13 +3,7 @@ uid: microsoft.quantum.extensions.bitwise.not
 name: Not
 type: function
 namespace: Microsoft.Quantum.Extensions.Bitwise
-summary: >-
-  > [!WARNING]
-
-  > 已放弃
-
-
-  请使用 @"microsoft.quantum.bitwise.not"。
+summary: 尚未弃用。 请改用 @"microsoft.quantum.bitwise.not"。
 syntax: 'function Not (a : Int) : Int'
 input:
   content: '(a : Int)'
@@ -23,9 +17,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: e621c1673051af87d8f2aff3851e9405fe830339
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 6221d119d6b83ca367ad175bc0ab31a34f961090
+  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233418"
+  ms.lasthandoff: 12/05/2019
+  ms.locfileid: "74865794"
