--- a/api/qsharp/microsoft.quantum.extensions.bitwise.parity.yml
+++ b/api/qsharp/microsoft.quantum.extensions.bitwise.parity.yml
@@ -3,13 +3,7 @@ uid: microsoft.quantum.extensions.bitwise.parity
 name: Parity
 type: function
 namespace: Microsoft.Quantum.Extensions.Bitwise
-summary: >-
-  > [!WARNING]
-
-  > 已放弃
-
-
-  请使用 @"microsoft.quantum.bitwise.parity"。
+summary: 奇偶校验已弃用。 请改用 @"microsoft.quantum.bitwise.parity"。
 syntax: 'function Parity (a : Int) : Int'
 input:
   content: '(a : Int)'
@@ -23,9 +17,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: ee15be3c9dbb372ae1ec3650f3acbc130a177a3d
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: d7e94922ba327f4ce164b0de02a69fc2933e6500
+  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73234506"
+  ms.lasthandoff: 12/05/2019
+  ms.locfileid: "74865760"
