--- a/api/qsharp/microsoft.quantum.extensions.bitwise.xbits.yml
+++ b/api/qsharp/microsoft.quantum.extensions.bitwise.xbits.yml
@@ -3,13 +3,7 @@ uid: microsoft.quantum.extensions.bitwise.xbits
 name: XBits
 type: function
 namespace: Microsoft.Quantum.Extensions.Bitwise
-summary: >-
-  > [!WARNING]
-
-  > 已放弃
-
-
-  请使用 @"microsoft.quantum.bitwise.xbits"。
+summary: XBits 已被弃用。 请改用 @"microsoft.quantum.bitwise.xbits"。
 syntax: 'function XBits (paulies : Pauli[]) : Int'
 input:
   content: '(paulies : Pauli[])'
@@ -24,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 2f5a58265d480ec556ef8f49fd1c823215478722
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 393da0abde83b37c71c99b89d2fef986a2bd6d0a
+  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73234438"
+  ms.lasthandoff: 12/05/2019
+  ms.locfileid: "74865743"
