--- a/api/qsharp/microsoft.quantum.extensions.bitwise.zbits.yml
+++ b/api/qsharp/microsoft.quantum.extensions.bitwise.zbits.yml
@@ -3,13 +3,7 @@ uid: microsoft.quantum.extensions.bitwise.zbits
 name: ZBits
 type: function
 namespace: Microsoft.Quantum.Extensions.Bitwise
-summary: >-
-  > [!WARNING]
-
-  > 已放弃
-
-
-  请使用 @"microsoft.quantum.bitwise.zbits"。
+summary: ZBits 已被弃用。 请改用 @"microsoft.quantum.bitwise.zbits"。
 syntax: 'function ZBits (paulies : Pauli[]) : Int'
 input:
   content: '(paulies : Pauli[])'
@@ -24,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 70da430048fb2f66881b2cb6a868b74d45f75e09
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: ba9067636be8a6b8863bfde2bb298b7ababe8b50
+  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73234353"
+  ms.lasthandoff: 12/05/2019
+  ms.locfileid: "74865709"
