commit translated contents

--- a/api/qsharp/microsoft.quantum.canon.applyquantumfouriertransformbe.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyquantumfouriertransformbe.yml
@@ -3,13 +3,7 @@ uid: microsoft.quantum.canon.applyquantumfouriertransformbe
 name: ApplyQuantumFourierTransformBE
 type: operation
 namespace: Microsoft.Quantum.Canon
-summary: >-
-  > [!WARNING]
-
-  > 已放弃
-
-
-  此操作已被删除。
+summary: ApplyQuantumFourierTransformBE 已被弃用。 请改用 @ "applyquantumfouriertransform （bigendianaslittleendian （qs））"。
 syntax: 'operation ApplyQuantumFourierTransformBE (qs : Microsoft.Quantum.Arithmetic.BigEndian) : Unit'
 input:
   content: '(qs : Microsoft.Quantum.Arithmetic.BigEndian)'
@@ -25,9 +19,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 6ec015a0aa244fedbb97944de782f9e4aa9004fe
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: bb34e02a8b49bb59990592bd1bf5ecd05dece068
+  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73220685"
+  ms.lasthandoff: 12/05/2019
+  ms.locfileid: "74864158"
