--- a/api/qsharp/microsoft.quantum.canon.applyreversedoplittleendian.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyreversedoplittleendian.yml
@@ -3,13 +3,7 @@ uid: microsoft.quantum.canon.applyreversedoplittleendian
 name: ApplyReversedOpLittleEndian
 type: operation
 namespace: Microsoft.Quantum.Canon
-summary: >-
-  > [!WARNING]
-
-  > 已放弃
-
-
-  请使用 @"Microsoft.Quantum.Arithmetic.ApplyReversedOpLE"。
+summary: ApplyReversedOpLittleEndian 已被弃用。 请改用 @"microsoft.quantum.arithmetic.applyreversedople"。
 syntax: 'operation ApplyReversedOpLittleEndian (op : (Microsoft.Quantum.Arithmetic.LittleEndian => Unit), register : Microsoft.Quantum.Arithmetic.BigEndian) : Unit'
 input:
   content: '(op : (Microsoft.Quantum.Arithmetic.LittleEndian => Unit), register : Microsoft.Quantum.Arithmetic.BigEndian)'
@@ -31,9 +25,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: b8736290ec502fd473a4fac6dfe7f5f87b1aba72
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 721437beb2acba33fb3a6ee872d066e03a72c0fd
+  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73223252"
+  ms.lasthandoff: 12/05/2019
+  ms.locfileid: "74864315"
