--- a/api/qsharp/microsoft.quantum.canon.modulus.yml
+++ b/api/qsharp/microsoft.quantum.canon.modulus.yml
@@ -3,13 +3,7 @@ uid: microsoft.quantum.canon.modulus
 name: Modulus
 type: function
 namespace: Microsoft.Quantum.Canon
-summary: >-
-  > [!WARNING]
-
-  > 已放弃
-
-
-  请使用 @"microsoft.quantum.math.modulusi"。
+summary: 取模已弃用。 请改用 @"microsoft.quantum.math.modulusi"。
 syntax: 'function Modulus (value : Int, modulus : Int) : Int'
 input:
   content: '(value : Int, modulus : Int)'
@@ -26,9 +20,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: b86ef33c19cbbcb43a9ade9e67083bcc0f3b1b72
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: f0f49fbe592d059b41c3c3570f5c6cf3458c0d8e
+  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73222742"
+  ms.lasthandoff: 12/05/2019
+  ms.locfileid: "74859578"
