--- a/articles/index.yml
+++ b/articles/index.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Landing
-title: Microsoft Quantum 文档
-summary: 了解如何使用 Microsoft Quantum 开发工具包和量子算法语言 Q#。 了解关键概念并编写你的第一个量子程序。
+title: Microsoft Quantum 开发工具包
+summary: 了解如何使用 Microsoft Quantum 开发工具包和 Q#（一种量子算法编程语言）。
 metadata:
-  title: Microsoft Quantum 文档 - Q# API 参考
-  description: 了解如何使用 Microsoft Quantum 开发人员工具包和量子编程语言 Q#。 了解关键概念并编写你的第一个量子程序。  探索 QDK 的丰富工具和库。
+  title: Microsoft Quantum 开发工具包 - Q# API 参考
+  description: 了解如何使用 Microsoft Quantum 开发工具包和 Q#（一种量子算法编程语言）。 了解关键概念并编写你的第一个量子程序。  探索 QDK 的丰富工具和库。
   ms.prod: quantum
   ms.topic: landing-page
   ms.collection: collection
   author: cjgronlund
   ms.author: cgronlun
   ms.date: 10/21/2019
-  ms.openlocfilehash: f757c99b1f5b1a821c9c341c442e1080378949a8
-  ms.sourcegitcommit: aa5e6f4a2deb4271a333d3f1b1eb69b5bb9a7bad
+  ms.openlocfilehash: 53ee7b0a1ba7a83fb943f18afd27b5c699f848b2
+  ms.sourcegitcommit: f8d6d32d16c3e758046337fb4b16a8c42fb04c39
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/02/2019
-  ms.locfileid: "73442511"
+  ms.lasthandoff: 01/29/2020
+  ms.locfileid: "76820719"
 landingContent:
 - title: Microsoft Quantum 入门
   linkLists:
@@ -44,9 +44,9 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: Python 安装
-      url: install-guide/index.md#develop-with-python
+      url: install-guide/pyinstall.md
     - text: Jupyter 安装
-      url: install-guide/index.md#develop-with-jupyter-notebooks
+      url: install-guide/qjupyter.md
   - linkListType: how-to-guide
     links:
     - text: 使用 Python 运行 Q# 示例
@@ -60,9 +60,9 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: Visual Studio 安装
-      url: install-guide/index.md#develop-with-c-on-windows-using-visual-studio
+      url: install-guide/csinstall.md
     - text: Visual Studio Code 安装
-      url: install-guide/index.md#develop-with-c-using-visual-studio-code
+      url: install-guide/csinstall.md
 - title: Q# 示例
   linkLists:
   - linkListType: how-to-guide
