--- a/articles/TOC.yml
+++ b/articles/TOC.yml
@@ -16,17 +16,7 @@
           href: overview/what-is-qsharp.md
         - name: 如何学习量子计算？
           href: overview/how-to-learn-quantum-computing.md
-    - name: 了解如何使用 Quantum Katas
-      href: intro-to-katas.md
-- name: 快速入门
-  items:
-    - name: 量子随机数生成器
-      href: quickstarts/qrng.md
-    - name: 'Q# 的量子基础知识'
-      href: quickstart.md
-    - name: 实现 Grover 的搜索算法
-      href: quickstarts/search.md
-- name: 操作方法指南
+- name: 安装和更新
   items:
     - name: 安装 QDK
       items:
@@ -40,8 +30,14 @@
           href: install-guide/qjupyter.md
     - name: 更新 QDK
       href: install-guide/update.md
-    - name: '创建 Q# 项目'
-      href: how-to-guides/create-qsharp-project.md
+- name: 快速入门
+  items:
+    - name: 量子随机数生成器
+      href: quickstarts/qrng.md
+    - name: 'Q# 的量子基础知识'
+      href: quickstart.md
+    - name: 实现 Grover 的搜索算法
+      href: quickstarts/search.md
 - name: 概念
   items:
     - name: 量子开发技术
@@ -52,21 +48,31 @@
       href: language/toc.yml
     - name: 'Q# 库'
       href: libraries/toc.yml
-    - name: 量子计算概念
-      href: concepts/toc.yml
     - name: 量子模拟器和资源估算器
       href: machines/toc.yml
+    - name: 量子计算概念
+      href: concepts/toc.yml
+- name: 操作方法指南
+  items:
+    - name: '创建 Q# 项目'
+      href: how-to-guides/create-qsharp-project.md
+- name: 'Q# 学习资源'
+  items:
+    - name: 了解如何使用 Quantum Katas
+      href: intro-to-katas.md
+    - name: 'Q# 示例'
+      href: 'https://docs.microsoft.com/en-us/samples/browse/?languages=qsharp'
 - name: 资源
   items:
+    - name: 术语表
+      href: Glossary.md
+    - name: 进一步阅读
+      href: for-more-info.md
     - name: QDK 发行说明
       topicHref: relnotes/index.md
       href: relnotes/toc.yml
     - name: 参与编写 QDK
       href: contributing/toc.yml
       topicHref: contributing/index.md
-    - name: 术语表
-      href: Glossary.md
-    - name: 更多信息
-      href: for-more-info.md
     - name: 许可
       href: license.md
