commit translated contents

--- a/api/qsharp/microsoft.quantum.canon.controlledonbitstring.yml
+++ b/api/qsharp/microsoft.quantum.canon.controlledonbitstring.yml
@@ -3,18 +3,73 @@ uid: microsoft.quantum.canon.controlledonbitstring
 name: ControlledOnBitString
 type: function
 namespace: Microsoft.Quantum.Canon
-summary: 如果控件注册状态对应于指定的位掩码，则返回在目标寄存器上应用 oracle 的单一运算符。
+summary: >-
+  如果控件注册状态对应于指定的位掩码，则返回在目标寄存器上应用 oracle 的单一运算符。
+
+
+  此函数的输出可以由 $U $ 的单一转换表示，\begin{align} U \ket{b_0 b_1 \cdots b_ {n-1}} \ket{\psi} = \ket{b_0 b_1 \cdots b_ {n}} \otimes \begin{cases} V \ket{\psi} & \textrm{if} （b_0 b_1 \cdots b_ {n-1}） = \texttt{bits} \\\\ \ket{\psi} & \textrm{otherwise} \end{cases}，\end{align}，其中 $V $ 是表示 `oracle` 操作操作的单一转换。
+remarks: >-
+  `bits` 和 `controlRegister` 的长度必须相等。
+
+
+  给定布尔数组 `bits` 并且单一操作 `oracle`，此函数的输出是执行以下步骤的操作：
+
+
+  * 将 `X` 操作应用到控制寄存器的每个 qubit，该控件与 `bits`的 `false` 元素对应;
+
+  * 将 `Controlled oracle` 应用于控件和目标寄存器;
+
+  * 将 `X` 操作应用于控件注册的每个 qubit，该控件寄存器再次与 `bits` 的 `false` 元素对应，以将控制寄存器返回到原始状态。
+
+
+  `Controlled` 函子的输出是 `ControlledOnBitString` 的一种特殊情况，其中 `bits` 等于 `[true, ..., true]`。
+examples: >-
+  以下代码片段是等效的：
+
+
+  ```qsharp
+
+  (ControlledOnBitString(bits, oracle))(controlRegister, targetRegister);
+
+  ```
+
+
+  and
+
+
+  ```qsharp
+
+  within {
+      ApplyPauliFromBitString(PauliX, false, bits, controlRegister);
+  } apply {
+      Controlled oracle(controlRegister, targetRegister);
+  }
+
+  ```
+
+
+  以下代码准备状态 $ \frac{1}{2}（\ket{00}-\ket{01} + \ket{10} + \ket{11}） $：
+
+
+  ```qsharp
+
+  using (register = Qubit[2]) {
+      ApplyToEach(H, register);
+      (ControlledOnBitString([false], Z))(register[0..0], register[1]);
+  }
+
+  ```
 syntax: "function ControlledOnBitString (bits : Bool[], oracle : ('T => Unit is Adj + Ctl)) : ((Qubit[], 'T) => Unit is Adj + Ctl)"
 input:
   content: "(bits : Bool[], oracle : ('T => Unit is Adj + Ctl))"
   types:
   - name: bits
-    summary: 布尔数组。
+    summary: 用于控制给定单一运算符的位字符串。
     isArray: true
     isPrimitive: true
     uid: Bool
   - name: oracle
-    summary: 单一运算符。
+    summary: 要应用于目标寄存器的单一运算符。
     isOperation: true
     input:
       types:
@@ -47,9 +102,9 @@ output:
     - Adjoint
     - Controlled
 metadata:
-  ms.openlocfilehash: 1abe0f1abcbab06aa9821c52878cf85b03d2c592
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: dde246a6eb0cf5e278cd079ff52c3a0b0ff71120
+  ms.sourcegitcommit: b7e205aaa7fa1ca9f0daa163e46154945f4bc965
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73227383"
+  ms.lasthandoff: 02/18/2020
+  ms.locfileid: "77441056"
